# node2vec

./: README.md  pyproject.toml  setup.py
node2vec/: categorical.py  node2vec.py  test_categorical.py  test_node2vec.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
